src/index.less
@import '~antd/dist/antd.variable.min.css';
@import '~ol/ol.css';
@import '~normalize.css/normalize.css';

:root {
  --headerHeight: 50px;
  --footerHeight: 40px;
  --componentShadow: 0 6px 12px rgb(0 0 0 / 18%), 0 -6px 12px rgb(0 0 0 / 18%);
}

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html,
body,
#app {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
}

.ant-notification-notice {
  margin-top: var(--headerHeight);
}

.error-boundary {
  min-width: 400px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

